--- a/app/header/header.component.html
+++ b/app/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header">
-  <app-top-nav [body]="bodyE"></app-top-nav>
+  <app-top-nav></app-top-nav>
   <app-hero-img></app-hero-img>
 </div>
