--- a/app/app.component.css
+++ b/app/app.component.css
@@ -20,31 +20,21 @@ p {
   }
 }
 
-.left-align {
-  text-align: left!important;
-}
-
-.primary {
-  color: #303133;
-}
-
 h2 {
   font-size: 40px;
   text-align: center;
 }
 
-/* Overwritings */
-.mat-toolbar {
-  position: absolute;
-  z-index: 5;
-  background: #f5f5f538;
-}
-mat-progress-spinner {
-  position: absolute!important;
-  top: 40%;
-  left: 50%;
+.left-align {
+  text-align: left!important;
 }
 
+ /* Colors */
+.primary {
+  color: #303133;
+}
+
+ /* Simple lines */
 .top-line {
   width: 80%;
   border-top: 1px solid white;
@@ -54,7 +44,7 @@ mat-progress-spinner {
   border-top: 1px solid;
 }
 
-/* Animations keyframes */
+/* Animations keyframes, element slides from left */
 @keyframes slideInFromLeft {
   0% {
     transform: translateY(100%);
@@ -66,7 +56,21 @@ mat-progress-spinner {
   }
 }
 
-/* Animations keyframes */
+/* Animations keyframes, element slides from bot */
+@media screen and (min-width: 1025px) {
+  @keyframes slideInFromBot {
+    0% {
+      transform: translate(-50%, 0%);
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+      transform: translate(-50%, -50%);
+    }
+  }
+}
+
+/* Animations keyframes, element appears */
 @keyframes appearBlur {
   0% {
     opacity: 0;
@@ -80,54 +84,58 @@ mat-progress-spinner {
   display: none!important;
 }
 
+/* filter to put over images */
 .filter {
   height: 100%;
   position: absolute;
   top: 0;
 }
-
 .filter.full {
   width: 100%;
 }
-
 .filter.half {
   width: 50%;
 }
-
 .filter.dark {
   background: #6969691a;
 }
-
 .filter.deep-dark {
   background: #69696994;
 }
 
 
-/* Grid layout */
+/* Overwrite angular material toolbar  */
+.mat-toolbar {
+  position: absolute;
+  z-index: 5;
+  background: #f5f5f538;
+}
 
+/* Overwrite angular material toolbar  */
+mat-progress-spinner {
+  position: absolute!important;
+  top: 40%;
+  left: 50%;
+}
+
+/* Overwrite angular material grid cell  */
 mat-grid-tile:nth-child(even) .grid-cell {
   margin-right: 0;
 }
-
 mat-grid-tile:nth-child(odd) .grid-cell {
   margin-left: 0;
 }
 
-mat-grid-tile:nth-child(1) .grid-cell{
+/* no margin top for the 2 first */
+mat-grid-tile:nth-child(1) .grid-cell, mat-grid-tile:nth-child(2) .grid-cell{
   margin-top: 0;
 }
 
-mat-grid-tile:nth-child(2) .grid-cell{
-  margin-top: 0;
-}
-
-mat-grid-tile:nth-last-of-type(-n+2) .grid-cell{
+/* no margin bot for the 2 last */
+mat-grid-tile:nth-last-of-type(-n+2) .grid-cell, mat-grid-tile:last-child .grid-cell{
   margin-bottom: 0;
 }
 
-mat-grid-tile:last-child .grid-cell{
-  margin-bottom: 0;
-}
 mat-grid-tile .grid-cell {
   width: 100%;
   height: 100%;
@@ -152,12 +160,13 @@ mat-grid-tile .grid-cell:hover{
   background-color: #e4e4e44d;
 }
 
+
+/* remove original html link styles */
 a.no-style:link {
   text-decoration: inherit;
   color: inherit;
   cursor: auto;
 }
-
 a.no-style:visited {
   text-decoration: inherit;
   color: inherit;
